; ModuleID = '/home/carl/AnghaBench/vlc/src/video_output/extr_video_epg.c_vout_OSDEpgEvent.c'
source_filename = "/home/carl/AnghaBench/vlc/src/video_output/extr_video_epg.c_vout_OSDEpgEvent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i8*, i64, i64 }
%struct.TYPE_7__ = type { i8* }

@.str = private unnamed_addr constant [7 x i8] c"%s-%s \00", align 1
@RGB_COLOR1 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_6__*, i32, i32, i32)* @vout_OSDEpgEvent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @vout_OSDEpgEvent(%struct.TYPE_6__* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_6__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_7__*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i8*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store %struct.TYPE_7__* null, %struct.TYPE_7__** %10, align 8
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 2
  %16 = load i64, i64* %15, align 8
  %17 = call i8* @vout_OSDPrintTime(i64 %16)
  store i8* %17, i8** %11, align 8
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %19 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %18, i32 0, i32 2
  %20 = load i64, i64* %19, align 8
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 1
  %23 = load i64, i64* %22, align 8
  %24 = add nsw i64 %20, %23
  %25 = call i8* @vout_OSDPrintTime(i64 %24)
  store i8* %25, i8** %12, align 8
  %26 = load i8*, i8** %11, align 8
  %27 = load i8*, i8** %12, align 8
  %28 = call i32 @asprintf(i8** %13, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8* %26, i8* %27)
  %29 = icmp slt i32 -1, %28
  br i1 %29, label %30, label %49

30:                                               ; preds = %4
  %31 = load i8*, i8** %13, align 8
  %32 = load i32, i32* %9, align 4
  %33 = load i32, i32* @RGB_COLOR1, align 4
  %34 = call i8* @vout_OSDSegment(i8* %31, i32 %32, i32 %33)
  %35 = bitcast i8* %34 to %struct.TYPE_7__*
  store %struct.TYPE_7__* %35, %struct.TYPE_7__** %10, align 8
  %36 = load %struct.TYPE_7__*, %struct.TYPE_7__** %10, align 8
  %37 = icmp ne %struct.TYPE_7__* %36, null
  br i1 %37, label %38, label %46

38:                                               ; preds = %30
  %39 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %40 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %39, i32 0, i32 0
  %41 = load i8*, i8** %40, align 8
  %42 = load i32, i32* %9, align 4
  %43 = call i8* @vout_OSDSegment(i8* %41, i32 %42, i32 16777215)
  %44 = load %struct.TYPE_7__*, %struct.TYPE_7__** %10, align 8
  %45 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %44, i32 0, i32 0
  store i8* %43, i8** %45, align 8
  br label %46

46:                                               ; preds = %38, %30
  %47 = load %struct.TYPE_7__*, %struct.TYPE_7__** %10, align 8
  %48 = call i32 @vout_OSDSegmentSetNoWrap(%struct.TYPE_7__* %47)
  br label %49

49:                                               ; preds = %46, %4
  %50 = load i8*, i8** %11, align 8
  %51 = call i32 @free(i8* %50)
  %52 = load i8*, i8** %12, align 8
  %53 = call i32 @free(i8* %52)
  %54 = load %struct.TYPE_7__*, %struct.TYPE_7__** %10, align 8
  %55 = icmp ne %struct.TYPE_7__* %54, null
  br i1 %55, label %57, label %56

56:                                               ; preds = %49
  store i32* null, i32** %5, align 8
  br label %62

57:                                               ; preds = %49
  %58 = load %struct.TYPE_7__*, %struct.TYPE_7__** %10, align 8
  %59 = load i32, i32* %7, align 4
  %60 = load i32, i32* %8, align 4
  %61 = call i32* @vout_OSDTextRegion(%struct.TYPE_7__* %58, i32 %59, i32 %60)
  store i32* %61, i32** %5, align 8
  br label %62

62:                                               ; preds = %57, %56
  %63 = load i32*, i32** %5, align 8
  ret i32* %63
}

declare dso_local i8* @vout_OSDPrintTime(i64) #1

declare dso_local i32 @asprintf(i8**, i8*, i8*, i8*) #1

declare dso_local i8* @vout_OSDSegment(i8*, i32, i32) #1

declare dso_local i32 @vout_OSDSegmentSetNoWrap(%struct.TYPE_7__*) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32* @vout_OSDTextRegion(%struct.TYPE_7__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
